--- a/notebooks/gemma/gemma-multi-inference.ipynb
+++ b/notebooks/gemma/gemma-multi-inference.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "! pip install --no-deps --upgrade \"flash-attn>=2.6.3\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: CUDA_VISIBLE_DEVICES=1\n",
+      "env: TOKENIZERS_PARALLELISM=false\n"
+     ]
+    }
+   ],
    "source": [
     "%env CUDA_VISIBLE_DEVICES=1\n",
     "%env TOKENIZERS_PARALLELISM=false"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stepan/.conda/envs/llm-py310/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch  # type: ignore\n",
     "import numpy as np  # type: ignore\n",
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +106,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unused kwargs: ['_load_in_4bit', '_load_in_8bit', 'quant_method']. These kwargs are not used in <class 'transformers.utils.quantization_config.BitsAndBytesConfig'>.\n",
+      "/home/stepan/.conda/envs/llm-py310/lib/python3.10/site-packages/transformers/quantizers/auto.py:174: UserWarning: You passed `quantization_config` or equivalent parameters to `from_pretrained` but the model you're loading already has a `quantization_config` attribute. The `quantization_config` from the model will be used.\n",
+      "  warnings.warn(warning_msg)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Gemma2ForCausalLM(\n",
+       "  (model): Gemma2Model(\n",
+       "    (embed_tokens): Embedding(256000, 2304, padding_idx=0)\n",
+       "    (layers): ModuleList(\n",
+       "      (0-25): 26 x Gemma2DecoderLayer(\n",
+       "        (self_attn): Gemma2FlashAttention2(\n",
+       "          (q_proj): lora.Linear4bit(\n",
+       "            (base_layer): Linear4bit(in_features=2304, out_features=2048, bias=False)\n",
+       "            (lora_dropout): ModuleDict(\n",
+       "              (default): Identity()\n",
+       "            )\n",
+       "            (lora_A): ModuleDict(\n",
+       "              (default): Linear(in_features=2304, out_features=16, bias=False)\n",
+       "            )\n",
+       "            (lora_B): ModuleDict(\n",
+       "              (default): Linear(in_features=16, out_features=2048, bias=False)\n",
+       "            )\n",
+       "            (lora_embedding_A): ParameterDict()\n",
+       "            (lora_embedding_B): ParameterDict()\n",
+       "            (lora_magnitude_vector): ModuleDict()\n",
+       "          )\n",
+       "          (k_proj): lora.Linear4bit(\n",
+       "            (base_layer): Linear4bit(in_features=2304, out_features=1024, bias=False)\n",
+       "            (lora_dropout): ModuleDict(\n",
+       "              (default): Identity()\n",
+       "            )\n",
+       "            (lora_A): ModuleDict(\n",
+       "              (default): Linear(in_features=2304, out_features=16, bias=False)\n",
+       "            )\n",
+       "            (lora_B): ModuleDict(\n",
+       "              (default): Linear(in_features=16, out_features=1024, bias=False)\n",
+       "            )\n",
+       "            (lora_embedding_A): ParameterDict()\n",
+       "            (lora_embedding_B): ParameterDict()\n",
+       "            (lora_magnitude_vector): ModuleDict()\n",
+       "          )\n",
+       "          (v_proj): lora.Linear4bit(\n",
+       "            (base_layer): Linear4bit(in_features=2304, out_features=1024, bias=False)\n",
+       "            (lora_dropout): ModuleDict(\n",
+       "              (default): Identity()\n",
+       "            )\n",
+       "            (lora_A): ModuleDict(\n",
+       "              (default): Linear(in_features=2304, out_features=16, bias=False)\n",
+       "            )\n",
+       "            (lora_B): ModuleDict(\n",
+       "              (default): Linear(in_features=16, out_features=1024, bias=False)\n",
+       "            )\n",
+       "            (lora_embedding_A): ParameterDict()\n",
+       "            (lora_embedding_B): ParameterDict()\n",
+       "            (lora_magnitude_vector): ModuleDict()\n",
+       "          )\n",
+       "          (o_proj): lora.Linear4bit(\n",
+       "            (base_layer): Linear4bit(in_features=2048, out_features=2304, bias=False)\n",
+       "            (lora_dropout): ModuleDict(\n",
+       "              (default): Identity()\n",
+       "            )\n",
+       "            (lora_A): ModuleDict(\n",
+       "              (default): Linear(in_features=2048, out_features=16, bias=False)\n",
+       "            )\n",
+       "            (lora_B): ModuleDict(\n",
+       "              (default): Linear(in_features=16, out_features=2304, bias=False)\n",
+       "            )\n",
+       "            (lora_embedding_A): ParameterDict()\n",
+       "            (lora_embedding_B): ParameterDict()\n",
+       "            (lora_magnitude_vector): ModuleDict()\n",
+       "          )\n",
+       "          (rotary_emb): Gemma2RotaryEmbedding()\n",
+       "        )\n",
+       "        (mlp): Gemma2MLP(\n",
+       "          (gate_proj): lora.Linear4bit(\n",
+       "            (base_layer): Linear4bit(in_features=2304, out_features=9216, bias=False)\n",
+       "            (lora_dropout): ModuleDict(\n",
+       "              (default): Identity()\n",
+       "            )\n",
+       "            (lora_A): ModuleDict(\n",
+       "              (default): Linear(in_features=2304, out_features=16, bias=False)\n",
+       "            )\n",
+       "            (lora_B): ModuleDict(\n",
+       "              (default): Linear(in_features=16, out_features=9216, bias=False)\n",
+       "            )\n",
+       "            (lora_embedding_A): ParameterDict()\n",
+       "            (lora_embedding_B): ParameterDict()\n",
+       "            (lora_magnitude_vector): ModuleDict()\n",
+       "          )\n",
+       "          (up_proj): lora.Linear4bit(\n",
+       "            (base_layer): Linear4bit(in_features=2304, out_features=9216, bias=False)\n",
+       "            (lora_dropout): ModuleDict(\n",
+       "              (default): Identity()\n",
+       "            )\n",
+       "            (lora_A): ModuleDict(\n",
+       "              (default): Linear(in_features=2304, out_features=16, bias=False)\n",
+       "            )\n",
+       "            (lora_B): ModuleDict(\n",
+       "              (default): Linear(in_features=16, out_features=9216, bias=False)\n",
+       "            )\n",
+       "            (lora_embedding_A): ParameterDict()\n",
+       "            (lora_embedding_B): ParameterDict()\n",
+       "            (lora_magnitude_vector): ModuleDict()\n",
+       "          )\n",
+       "          (down_proj): lora.Linear4bit(\n",
+       "            (base_layer): Linear4bit(in_features=9216, out_features=2304, bias=False)\n",
+       "            (lora_dropout): ModuleDict(\n",
+       "              (default): Identity()\n",
+       "            )\n",
+       "            (lora_A): ModuleDict(\n",
+       "              (default): Linear(in_features=9216, out_features=16, bias=False)\n",
+       "            )\n",
+       "            (lora_B): ModuleDict(\n",
+       "              (default): Linear(in_features=16, out_features=2304, bias=False)\n",
+       "            )\n",
+       "            (lora_embedding_A): ParameterDict()\n",
+       "            (lora_embedding_B): ParameterDict()\n",
+       "            (lora_magnitude_vector): ModuleDict()\n",
+       "          )\n",
+       "          (act_fn): PytorchGELUTanh()\n",
+       "        )\n",
+       "        (input_layernorm): Gemma2RMSNorm()\n",
+       "        (post_attention_layernorm): Gemma2RMSNorm()\n",
+       "        (pre_feedforward_layernorm): Gemma2RMSNorm()\n",
+       "        (post_feedforward_layernorm): Gemma2RMSNorm()\n",
+       "      )\n",
+       "    )\n",
+       "    (norm): Gemma2RMSNorm()\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=2304, out_features=256000, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model, tokenizer = get_model_tokenizer()\n",
     "model"
@@ -107,9 +261,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 430/430 [00:00<00:00, 1405.09 examples/s]\n",
+      "Map: 100%|██████████| 112/112 [00:00<00:00, 1483.87 examples/s]\n",
+      "Map: 100%|██████████| 459/459 [00:00<00:00, 818.90 examples/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
+       "        num_rows: 430\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
+       "        num_rows: 321\n",
+       "    })\n",
+       "    val: Dataset({\n",
+       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
+       "        num_rows: 138\n",
+       "    })\n",
+       "    predict: Dataset({\n",
+       "        features: ['id', 'challenge', 'texts', 'messages'],\n",
+       "        num_rows: 112\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset = data_utils.prepare_dataset(tokenizer, fit_dataset=True, base_path=BASE_PATH)\n",
     "dataset"
@@ -117,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,9 +422,6 @@
     "            labels.append(train_utils.tensor_to_int(label))\n",
     "            challenge_ids.append((challenge_id, challenge[\"order\"]))\n",
     "\n",
-    "        if i % 2 == 0 and i > 0:\n",
-    "            break\n",
-    "\n",
     "    return {\n",
     "        \"ids\": challenge_ids,\n",
     "        \"preds\": preds,\n",
@@ -243,9 +431,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 2/321 [08:38<22:59:16, 259.42s/it]\n",
+      "Exact match accuracy: 0.0000\n",
+      "Average partial match score: 0.0000\n"
+     ]
+    }
+   ],
    "source": [
     "results = evaluate(model, tokenizer, dataset[\"test\"], batch_size=1, num_seq=3)\n",
     "# Calculate metrics\n",
