--- a/notebooks/gemma/gemma.ipynb
+++ b/notebooks/gemma/gemma.ipynb
@@ -219,37 +219,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 430/430 [00:00<00:00, 960.74 examples/s]\n",
-      "Map: 100%|██████████| 112/112 [00:00<00:00, 1516.51 examples/s]\n",
-      "Map: 100%|██████████| 459/459 [00:00<00:00, 984.14 examples/s]\n"
+      "Map: 100%|██████████| 112/112 [00:00<00:00, 1488.95 examples/s]\n",
+      "Map: 100%|██████████| 430/430 [00:00<00:00, 955.64 examples/s]\n",
+      "Map: 100%|██████████| 459/459 [00:00<00:00, 979.22 examples/s]\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
-       "        num_rows: 430\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
-       "        num_rows: 321\n",
-       "    })\n",
-       "    val: Dataset({\n",
-       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
-       "        num_rows: 138\n",
-       "    })\n",
-       "    predict: Dataset({\n",
-       "        features: ['id', 'challenge', 'texts', 'messages'],\n",
-       "        num_rows: 112\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "type object 'Dataset' has no attribute 'concatenate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mdata_utils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprepare_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfit_dataset\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbase_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mBASE_PATH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfinal_training\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m dataset\n",
+      "File \u001b[0;32m~/kaggle-arc-agi/scripts/data_utils.py:142\u001b[0m, in \u001b[0;36mprepare_dataset\u001b[0;34m(tokenizer, use_system_prompt, fit_dataset, base_path, final_training)\u001b[0m\n\u001b[1;32m    139\u001b[0m eval_dataset \u001b[38;5;241m=\u001b[39m eval_dataset\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28;01mlambda\u001b[39;00m x: process_dataset(x, eval_dataset[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msolution\u001b[39m\u001b[38;5;124m\"\u001b[39m]), batched\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m final_training:  \u001b[38;5;66;03m# if final training, we need to add the validation dataset to the training dataset\u001b[39;00m\n\u001b[0;32m--> 142\u001b[0m     train_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mDataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m([train_dataset, eval_dataset])\n\u001b[1;32m    144\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m DatasetDict(\n\u001b[1;32m    145\u001b[0m         {\n\u001b[1;32m    146\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m: train_dataset,\n\u001b[1;32m    147\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredict\u001b[39m\u001b[38;5;124m\"\u001b[39m: pred_dataset,\n\u001b[1;32m    148\u001b[0m         }\n\u001b[1;32m    149\u001b[0m     )\n\u001b[1;32m    151\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m train_dataset\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28;01mlambda\u001b[39;00m x: process_dataset(x, train_dataset[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msolution\u001b[39m\u001b[38;5;124m\"\u001b[39m]), batched\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'Dataset' has no attribute 'concatenate'"
+     ]
     }
    ],
    "source": [
