--- a/notebooks/gemma/gemma.ipynb
+++ b/notebooks/gemma/gemma.ipynb
@@ -219,22 +219,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 112/112 [00:00<00:00, 1488.95 examples/s]\n",
-      "Map: 100%|██████████| 430/430 [00:00<00:00, 955.64 examples/s]\n",
-      "Map: 100%|██████████| 459/459 [00:00<00:00, 979.22 examples/s]\n"
+      "Map: 100%|██████████| 112/112 [00:00<00:00, 1460.69 examples/s]\n",
+      "Map: 100%|██████████| 430/430 [00:00<00:00, 970.92 examples/s]\n",
+      "Map: 100%|██████████| 459/459 [00:00<00:00, 977.14 examples/s]\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'Dataset' has no attribute 'concatenate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mdata_utils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprepare_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfit_dataset\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbase_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mBASE_PATH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfinal_training\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m dataset\n",
-      "File \u001b[0;32m~/kaggle-arc-agi/scripts/data_utils.py:142\u001b[0m, in \u001b[0;36mprepare_dataset\u001b[0;34m(tokenizer, use_system_prompt, fit_dataset, base_path, final_training)\u001b[0m\n\u001b[1;32m    139\u001b[0m eval_dataset \u001b[38;5;241m=\u001b[39m eval_dataset\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28;01mlambda\u001b[39;00m x: process_dataset(x, eval_dataset[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msolution\u001b[39m\u001b[38;5;124m\"\u001b[39m]), batched\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m final_training:  \u001b[38;5;66;03m# if final training, we need to add the validation dataset to the training dataset\u001b[39;00m\n\u001b[0;32m--> 142\u001b[0m     train_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mDataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m([train_dataset, eval_dataset])\n\u001b[1;32m    144\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m DatasetDict(\n\u001b[1;32m    145\u001b[0m         {\n\u001b[1;32m    146\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m: train_dataset,\n\u001b[1;32m    147\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredict\u001b[39m\u001b[38;5;124m\"\u001b[39m: pred_dataset,\n\u001b[1;32m    148\u001b[0m         }\n\u001b[1;32m    149\u001b[0m     )\n\u001b[1;32m    151\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m train_dataset\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28;01mlambda\u001b[39;00m x: process_dataset(x, train_dataset[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msolution\u001b[39m\u001b[38;5;124m\"\u001b[39m]), batched\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: type object 'Dataset' has no attribute 'concatenate'"
-     ]
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
+       "        num_rows: 889\n",
+       "    })\n",
+       "    predict: Dataset({\n",
+       "        features: ['id', 'challenge', 'texts', 'messages'],\n",
+       "        num_rows: 112\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -244,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "877bb5e4",
    "metadata": {},
    "outputs": [
@@ -255,17 +262,7 @@
       "Train split:\n",
       "  Min training samples: 1\n",
       "  Max training samples: 10\n",
-      "  Avg training samples: 3.24\n",
-      "\n",
-      "Val split:\n",
-      "  Min training samples: 1\n",
-      "  Max training samples: 7\n",
-      "  Avg training samples: 3.16\n",
-      "\n",
-      "Test split:\n",
-      "  Min training samples: 1\n",
-      "  Max training samples: 7\n",
-      "  Avg training samples: 3.18\n",
+      "  Avg training samples: 3.20\n",
       "\n",
       "Predict split:\n",
       "  Min training samples: 1\n",
@@ -288,6 +285,8 @@
     "\n",
     "splits = [\"train\", \"val\", \"test\", \"predict\"]\n",
     "for split in splits:\n",
+    "    if split not in dataset:\n",
+    "        continue\n",
     "    stats = calculate_training_samples_stats(dataset[split])\n",
     "    print(f\"{split.capitalize()} split:\")\n",
     "    print(f\"  Min training samples: {stats['min']}\")\n",
@@ -298,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3a769215",
    "metadata": {},
    "outputs": [
@@ -306,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filter: 100%|██████████| 430/430 [00:00<00:00, 745.32 examples/s]\n"
+      "Filter: 100%|██████████| 889/889 [00:01<00:00, 716.35 examples/s]\n"
      ]
     },
     {
@@ -314,44 +313,14 @@
      "output_type": "stream",
      "text": [
       "0 train tasks were filtered out because they exceed the 6144 token limit.\n",
-      "The filtered train dataset contains 430 tasks for fine-tuning.\n"
+      "The filtered train dataset contains 889 tasks for fine-tuning.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filter: 100%|██████████| 138/138 [00:00<00:00, 674.92 examples/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 val tasks were filtered out because they exceed the 6144 token limit.\n",
-      "The filtered val dataset contains 138 tasks for evaluation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filter: 100%|██████████| 321/321 [00:00<00:00, 672.33 examples/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 test tasks were filtered out because they exceed the 6144 token limit.\n",
-      "The filtered test dataset contains 321 tasks for evaluation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filter: 100%|██████████| 112/112 [00:00<00:00, 1025.25 examples/s]"
+      "Filter: 100%|██████████| 112/112 [00:00<00:00, 1020.40 examples/s]"
      ]
     },
     {
@@ -379,6 +348,8 @@
     "\n",
     "    filtered_splits = {}\n",
     "    for split in [\"train\", \"val\", \"test\", \"predict\"]:\n",
+    "        if split not in dataset:\n",
+    "            continue\n",
     "        filtered_splits[split], filtered_out_tasks = filter_split(split)\n",
     "        print(f\"{filtered_out_tasks} {split} tasks were filtered out because they exceed the {max_seq_length} token limit.\")\n",
     "        print(f\"The filtered {split} dataset contains {len(filtered_splits[split])} tasks for {'fine-tuning' if split == 'train' else 'evaluation'}.\")\n",
@@ -427,56 +398,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "c9a1d37f",
    "metadata": {},
    "outputs": [],
    "source": [
     "@train\n",
     "def training(model, tokenizer, dataset, max_seq_length):\n",
-    "    trainer = SFTTrainer(\n",
-    "        model=model,\n",
-    "        tokenizer=tokenizer,\n",
-    "        train_dataset=dataset[\"train\"],\n",
-    "        eval_dataset=dataset[\"val\"],\n",
-    "        dataset_text_field=\"texts\",\n",
-    "        max_seq_length=max_seq_length,\n",
-    "        dataset_num_proc=2,\n",
-    "        packing=False,  # Can make training 5x faster for short sequences.\n",
-    "        args=TrainingArguments(\n",
-    "            per_device_train_batch_size=1,\n",
-    "            per_device_eval_batch_size=1,\n",
-    "            gradient_accumulation_steps=8,\n",
-    "            eval_strategy=\"steps\",\n",
-    "            eval_steps=100,\n",
-    "            logging_steps=100,\n",
-    "            # num_train_epochs=1,  # Set this for 1 full training run.\n",
-    "            warmup_steps=5,\n",
-    "            max_steps=500,\n",
-    "            learning_rate=2e-5,\n",
-    "            fp16=not is_bfloat16_supported(),\n",
-    "            bf16=is_bfloat16_supported(),\n",
-    "            optim=\"adamw_8bit\",\n",
-    "            weight_decay=0.01,\n",
-    "            lr_scheduler_type=\"linear\",\n",
-    "            seed=3407,\n",
-    "            output_dir=f\"{BASE_PATH}/models/gemma-2-9b-it\",\n",
-    "            metric_for_best_model=\"eval_loss\",\n",
-    "            save_best_model=True,\n",
-    "            # save_strategy='no',\n",
-    "            save_strategy=\"steps\",\n",
-    "            save_steps=250,\n",
-    "            save_total_limit=2,\n",
-    "        ),\n",
-    "        # compute_metrics=compute_metrics\n",
+    "    common_args = {\n",
+    "        \"model\": model,\n",
+    "        \"tokenizer\": tokenizer,\n",
+    "        \"train_dataset\": dataset[\"train\"],\n",
+    "        \"dataset_text_field\": \"texts\",\n",
+    "        \"max_seq_length\": max_seq_length,\n",
+    "        \"dataset_num_proc\": 2,\n",
+    "        \"packing\": False,\n",
+    "    }\n",
+    "\n",
+    "    training_args = TrainingArguments(\n",
+    "        per_device_train_batch_size=1,\n",
+    "        gradient_accumulation_steps=8,\n",
+    "        logging_steps=100,\n",
+    "        warmup_steps=5,\n",
+    "        max_steps=500,\n",
+    "        learning_rate=2e-5,\n",
+    "        fp16=not is_bfloat16_supported(),\n",
+    "        bf16=is_bfloat16_supported(),\n",
+    "        optim=\"adamw_8bit\",\n",
+    "        weight_decay=0.01,\n",
+    "        lr_scheduler_type=\"linear\",\n",
+    "        seed=3407,\n",
+    "        output_dir=f\"{BASE_PATH}/models/gemma-2-9b-it\",\n",
+    "        save_strategy=\"steps\",\n",
+    "        save_steps=250,\n",
+    "        save_total_limit=2,\n",
     "    )\n",
+    "\n",
+    "    if 'val' in dataset:\n",
+    "        common_args[\"eval_dataset\"] = dataset[\"val\"]\n",
+    "        training_args.per_device_eval_batch_size = 1\n",
+    "        training_args.eval_strategy = \"steps\"\n",
+    "        training_args.eval_steps = 100\n",
+    "        training_args.metric_for_best_model = \"eval_loss\"\n",
+    "        training_args.save_best_model = True\n",
+    "\n",
+    "    trainer = SFTTrainer(args=training_args, **common_args)\n",
     "    stats = trainer.train()\n",
     "    return trainer, stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ff3a7382",
    "metadata": {},
    "outputs": [
@@ -484,13 +457,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map (num_proc=2): 100%|██████████| 430/430 [00:01<00:00, 280.17 examples/s]\n",
-      "Map (num_proc=2): 100%|██████████| 138/138 [00:01<00:00, 88.99 examples/s] \n",
+      "Map (num_proc=2): 100%|██████████| 889/889 [00:02<00:00, 414.68 examples/s]\n",
       "max_steps is given, it will override any value given in num_train_epochs\n",
       "==((====))==  Unsloth - 2x faster free finetuning | Num GPUs = 1\n",
-      "   \\\\   /|    Num examples = 430 | Num Epochs = 19\n",
+      "   \\\\   /|    Num examples = 889 | Num Epochs = 5\n",
       "O^O/ \\_/ \\    Batch size per device = 1 | Gradient Accumulation steps = 8\n",
-      "\\        /    Total batch size = 8 | Total steps = 1,000\n",
+      "\\        /    Total batch size = 8 | Total steps = 500\n",
       " \"-____-\"     Number of trainable parameters = 54,018,048\n"
      ]
     },
@@ -500,67 +472,36 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='1000' max='1000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1000/1000 3:54:35, Epoch 18/19]\n",
+       "      <progress value='500' max='500' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [500/500 2:12:25, Epoch 4/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        " <tr style=\"text-align: left;\">\n",
        "      <th>Step</th>\n",
        "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
-       "      <td>0.444200</td>\n",
-       "      <td>0.303148</td>\n",
+       "      <td>0.434900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>200</td>\n",
-       "      <td>0.295100</td>\n",
-       "      <td>0.283015</td>\n",
+       "      <td>0.298000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>300</td>\n",
-       "      <td>0.250500</td>\n",
-       "      <td>0.261734</td>\n",
+       "      <td>0.277400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>400</td>\n",
-       "      <td>0.205500</td>\n",
-       "      <td>0.260017</td>\n",
+       "      <td>0.250100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>500</td>\n",
-       "      <td>0.181700</td>\n",
-       "      <td>0.268342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>600</td>\n",
-       "      <td>0.151400</td>\n",
-       "      <td>0.283499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>700</td>\n",
-       "      <td>0.128400</td>\n",
-       "      <td>0.290501</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>800</td>\n",
-       "      <td>0.108100</td>\n",
-       "      <td>0.304979</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>900</td>\n",
-       "      <td>0.097500</td>\n",
-       "      <td>0.320863</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1000</td>\n",
-       "      <td>0.088900</td>\n",
-       "      <td>0.332176</td>\n",
+       "      <td>0.253600</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -575,10 +516,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=1000, training_loss=0.1951298542022705, metrics={'train_runtime': 14093.8311, 'train_samples_per_second': 0.568, 'train_steps_per_second': 0.071, 'total_flos': 6.154787005051023e+17, 'train_loss': 0.1951298542022705, 'epoch': 18.6046511627907})"
+       "TrainOutput(global_step=500, training_loss=0.30279122161865235, metrics={'train_runtime': 7970.5907, 'train_samples_per_second': 0.502, 'train_steps_per_second': 0.063, 'total_flos': 3.895107297902285e+17, 'train_loss': 0.30279122161865235, 'epoch': 4.499437570303712})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "932124f2",
    "metadata": {},
    "outputs": [],
@@ -600,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "4c6109ad",
    "metadata": {},
    "outputs": [
@@ -608,7 +549,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun Sep 22 09:13:05 2024       \n",
+      "Sun Sep 22 15:37:50 2024       \n",
       "+---------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 535.129.03             Driver Version: 535.129.03   CUDA Version: 12.2     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
@@ -617,11 +558,11 @@
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
       "|   0  NVIDIA RTX A5000               On  | 00000000:2B:00.0 Off |                  Off |\n",
-      "| 30%   33C    P8              20W / 230W |  15171MiB / 24564MiB |      0%      Default |\n",
+      "| 30%   32C    P8              19W / 230W |  18269MiB / 24564MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "|   1  NVIDIA RTX A5000               On  | 00000000:41:00.0 Off |                  Off |\n",
-      "| 30%   37C    P8              25W / 230W |  21949MiB / 24564MiB |      0%      Default |\n",
+      "| 30%   39C    P2              64W / 230W |  16489MiB / 24564MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -633,10 +574,10 @@
       "|    0   N/A  N/A      1810      G   /usr/lib/xorg/Xorg                           79MiB |\n",
       "|    0   N/A  N/A      1988      G   /usr/bin/gnome-shell                          9MiB |\n",
       "|    0   N/A  N/A      2347      G   /usr/lib/xorg/Xorg                           22MiB |\n",
-      "|    0   N/A  N/A   1008531      C   ...iconda3/envs/unsloth_env/bin/python    14922MiB |\n",
+      "|    0   N/A  N/A   1107583      C   ...an/.conda/envs/llm-py310/bin/python    18022MiB |\n",
       "|    1   N/A  N/A      1810      G   /usr/lib/xorg/Xorg                            4MiB |\n",
       "|    1   N/A  N/A      2347      G   /usr/lib/xorg/Xorg                            4MiB |\n",
-      "|    1   N/A  N/A   1083016      C   ...an/.conda/envs/llm-py310/bin/python    21918MiB |\n",
+      "|    1   N/A  N/A   1101827      C   ...an/.conda/envs/llm-py310/bin/python    16458MiB |\n",
       "+---------------------------------------------------------------------------------------+\n"
      ]
     }
