add some llama stuff

--- a/notebooks/common/save_model.ipynb
+++ b/notebooks/common/save_model.ipynb
@@ -28,15 +28,23 @@
    "outputs": [],
    "source": [
     "BASE_PATH = '/home/stepan/kaggle-arc-agi'\n",
-    "BASE_MODEL_ID = 'unsloth/gemma-2-2b-it'\n",
-    "NEW_MODEL_ID = f'{BASE_PATH}/models/gemma-2-2b-it/checkpoint-500'"
+    "BASE_MODEL_ID = 'unsloth/gemma-2-9b-it-bnb-4bit'\n",
+    "NEW_MODEL_ID = f'{BASE_PATH}/models/gemma-2-9b-it'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unused kwargs: ['_load_in_4bit', '_load_in_8bit', 'quant_method']. These kwargs are not used in <class 'transformers.utils.quantization_config.BitsAndBytesConfig'>.\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL_ID)\n",
     "\n",
@@ -53,7 +61,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stepan/.conda/envs/llm-py310/lib/python3.10/site-packages/peft/tuners/lora/bnb.py:336: UserWarning: Merge lora module to 4-bit linear may get different generations due to rounding errors.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "model = PeftModel.from_pretrained(base_model_reload, NEW_MODEL_ID)\n",
     "\n",
@@ -68,11 +85,11 @@
     {
      "data": {
       "text/plain": [
-       "('/home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/tokenizer_config.json',\n",
-       " '/home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/special_tokens_map.json',\n",
-       " '/home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/tokenizer.model',\n",
-       " '/home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/added_tokens.json',\n",
-       " '/home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/tokenizer.json')"
+       "('/home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/tokenizer_config.json',\n",
+       " '/home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/special_tokens_map.json',\n",
+       " '/home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/tokenizer.model',\n",
+       " '/home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/added_tokens.json',\n",
+       " '/home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/tokenizer.json')"
       ]
      },
      "execution_count": 5,
@@ -81,8 +98,8 @@
     }
    ],
    "source": [
-    "model.save_pretrained(f'{BASE_PATH}/models/gemma-2-2b-it/baseline')\n",
-    "tokenizer.save_pretrained(f'{BASE_PATH}/models/gemma-2-2b-it/baseline')"
+    "model.save_pretrained(f'{BASE_PATH}/models/gemma-2-9b-it/baseline')\n",
+    "tokenizer.save_pretrained(f'{BASE_PATH}/models/gemma-2-9b-it/baseline')"
    ]
   },
   {
@@ -94,23 +111,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/ (stored 0%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/model.safetensors.index.json (deflated 96%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/model-00001-of-00002.safetensors (deflated 21%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/special_tokens_map.json (deflated 76%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/.ipynb_checkpoints/ (stored 0%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/.ipynb_checkpoints/config-checkpoint.json (deflated 50%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/config.json (deflated 50%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/generation_config.json (deflated 31%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/tokenizer.json (deflated 72%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/tokenizer_config.json (deflated 95%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/tokenizer.model (deflated 51%)\n",
-      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-2b-it/baseline/model-00002-of-00002.safetensors (deflated 21%)\n"
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/ (stored 0%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/model.safetensors.index.json (deflated 96%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/model-00004-of-00008.safetensors (deflated 7%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/model-00001-of-00008.safetensors (deflated 12%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/special_tokens_map.json (deflated 76%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/model-00005-of-00008.safetensors (deflated 7%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/model-00002-of-00008.safetensors (deflated 7%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/config.json (deflated 56%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/generation_config.json (deflated 31%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/tokenizer.json (deflated 72%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/model-00006-of-00008.safetensors (deflated 7%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/tokenizer_config.json (deflated 95%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/tokenizer.model (deflated 51%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/model-00007-of-00008.safetensors (deflated 7%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/model-00003-of-00008.safetensors (deflated 7%)\n",
+      "  adding: home/stepan/kaggle-arc-agi/models/gemma-2-9b-it/baseline/model-00008-of-00008.safetensors (deflated 7%)\n"
      ]
     }
    ],
    "source": [
-    "! zip -r {BASE_PATH}/models/gemma-2-2b-it/baseline.zip {BASE_PATH}/models/gemma-2-2b-it/baseline"
+    "! zip -r {BASE_PATH}/models/gemma-2-9b-it/baseline.zip {BASE_PATH}/models/gemma-2-9b-it/baseline"
    ]
   },
   {
